Separate nestled objects to make it more readable